# bci-motor-imagery

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_setup.py
src/bci_mi/: benchmark.py  compare_models.py  config.py  data.py  evaluate.py  plot_benchmark.py  plot_model_comparison.py  plot_results.py  summarise_comparison.py  train.py
tests/: test_imports.py
